--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -11,7 +11,9 @@
     margin-left: 10%;
   }
 
-
+.tagA{
+  color: rgb(196, 7, 7);
+}
 
 .card {
   -webkit-animation: animation 1000ms linear both;
